# TextAssistant

./: .gitignore  CMakeLists.txt  README.md
builds/: TextAssistant
resources/: learn_input  test_input  testing_input
src/: NGram.cpp  NGram.h  NGramController.cpp  NGramController.h  main.cpp
src/database/: ConnectionSetting.h  MysqlDbController.cpp  MysqlDbController.h  NGramRepo.cpp  NGramRepo.h
src/tests/: NGramControllerTest.h  TextParserTests.h
src/utils/: ArgsParser.cpp  ArgsParser.h  TextParser.cpp  TextParser.h
